# bl702-hal

./: Cargo.toml  LICENSE-MIT  LICENSE-MULAN  README.md  assemble.sh  build.rs  memory.x  run_from_ram.x
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: adc.rs  blinky.rs  lcd.rs  serial.rs  serial_echo.rs
scripts/: assemble.bat  assemble.ps1  assemble.sh
src/: adc.rs  clock.rs  delay.rs  gpio.rs  interrupt.rs.bak  interrupts.rs  lib.rs  spi.rs  system.rs  uart.rs
src/system/: glb.rs  hbn.rs  pds.rs  romfunc.rs
src/system/romfunc/: data.rs  romfuncsignatures.rs
