[package]
name = "bl702-hal"
version = "0.0.3"
edition = "2021"
license = "MIT OR MulanPSL-2.0"
keywords = ["hal", "bl702", "riscv"]
categories = ["embedded", "no-std", "hardware-support"]
repository = "https://github.com/9names/bl702-hal"
description = "HAL for the Bouffalo Lab BL702 microcontroller family"

[dependencies]
bl702-pac = "0.0.2"
embedded-hal = "=1.0.0-alpha.5"
embedded-time = "0.12.0"
riscv = "0.8.0"
nb = "1.0"
paste = "1.0"

[dependencies.embedded-hal-zero]
version = "0.2.7"
package = "embedded-hal"
features = ["unproven"]

[dev-dependencies]
riscv-rt = "0.9.0"
panic-halt = "0.2.0"

[build-dependencies]
riscv-target = "0.1.2"

[features]
ramexec = []
