[package]
name = "bl702-hal"
version = "0.0.3"
edition = "2021"
license = "MIT OR MulanPSL-2.0"
keywords = ["hal", "bl702", "riscv"]
categories = ["embedded", "no-std", "hardware-support"]
repository = "https://github.com/9names/bl702-hal"
description = "HAL for the Bouffalo Lab BL702 microcontroller family"

[dependencies]
bl702-pac = "0.0.2"
embedded-time = "0.12.0"
riscv = "0.10.0"
nb = "1.0"
paste = "1.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-alpha = { version = "=1.0.0-alpha.5", package = "embedded-hal" }
ufmt = { version = "0.2", optional = true }
ufmt-write = { version = "0.1", optional = true }

[dev-dependencies]
riscv-rt = "0.10.0"
panic-halt = "0.2.0"

[build-dependencies]
riscv-target = "0.1.2"

[features]
default = ["panic_serial", "print_serial"]
ramexec = []
panic_serial = []
print_serial = ["ufmt", "ufmt-write"]
