[package]
name = "bl702-hal"
version = "0.0.3"
edition = "2021"
license = "MIT OR MulanPSL-2.0"
keywords = ["hal", "bl702", "riscv"]
categories = ["embedded", "no-std", "hardware-support"]
repository = "https://github.com/9names/bl702-hal"
description = "HAL for the Bouffalo Lab BL702 microcontroller family"

[dependencies]
bl702-pac = { version = "0.0.3", features = ["critical-section"] }
embedded-time = "0.12.0"
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
nb = "1.0"
paste = "1.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-alpha = { version = "=1.0.0-alpha.5", package = "embedded-hal" }
ufmt = { version = "0.2", optional = true }
ufmt-write = { version = "0.1", optional = true }

[dev-dependencies]
riscv-rt = "0.11.0"
st7735-lcd = "0.8"
embedded-graphics = "0.7.1"

[build-dependencies]
riscv-target = "0.1.2"

[features]
default = ["panic_serial", "print_serial"]
ramexec = []
panic_serial = []
print_serial = ["ufmt", "ufmt-write"]
